--- a/force-app/main/default/classes/HelloWorld.cls
+++ b/force-app/main/default/classes/HelloWorld.cls
@@ -1,5 +1,8 @@
-public class HelloWorld {
+public class helloWorl {
     public HelloWorld() {
+        for (Integer i =0 ; i < 400; i++){
+            Account act = Database.query('Select Name From Account');
+        }
 
     }
 }
