--- a/force-app/main/default/classes/HelloWorld.cls
+++ b/force-app/main/default/classes/HelloWorld.cls
@@ -1,6 +1,7 @@
-public class helloWorl {
+public class HelloWorld {
     public HelloWorld() {
         for (Integer i =0 ; i < 400; i++){
+            Account act = Database.query('Select');
         }
 
     }
