--- a/force-app/main/default/classes/HelloWorld.cls
+++ b/force-app/main/default/classes/HelloWorld.cls
@@ -1,7 +1,7 @@
 public with sharing class HelloWorld {
     public ab_HelloWorld() {
         for (Integer i =0 ; i < 400; i++){
-            
+            Account act = Database.query('Select');
         }
 
     }
