--- a/force-app/main/default/classes/HelloWorld.cls
+++ b/force-app/main/default/classes/HelloWorld.cls
@@ -1,4 +1,4 @@
-public with sharing class HelloWorld {
+public class HelloWorld {
     public ab_HelloWorld() {
         for (Integer i =0 ; i < 400; i++){
             Account act = Database.query('Select');
