--- a/force-app/main/default/classes/HelloWorld.cls
+++ b/force-app/main/default/classes/HelloWorld.cls
@@ -1,4 +1,5 @@
 public with sharing class HelloWorld {
+    String acb;
     public ab_HelloWorld() {
         for (Integer i =0 ; i < 400; i++){
             Account act = Database.query('Select');
