--- a/force-app/main/default/classes/HelloWorld.cls
+++ b/force-app/main/default/classes/HelloWorld.cls
@@ -1,5 +1,6 @@
 public with sharing class HelloWorld {
     String acb;
+    Integer a;
     public ab_HelloWorld() {
         for (Integer i =0 ; i < 400; i++){
             Account act = Database.query('Select');
